bitsandbytes/bits/tests/ui/tuple_struct.rs
use bits::wire;

#[wire(big)]
struct X(u8);

fn main() {}
